--- a/web/sites/nextbet/config/sync/core.entity_form_display.node.arcade_game.default.yml
+++ b/web/sites/nextbet/config/sync/core.entity_form_display.node.arcade_game.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.arcade_game.body
     - field.field.node.arcade_game.field_arc_game_categories
     - field.field.node.arcade_game.field_arc_game_title
+    - field.field.node.arcade_game.field_external_game_id
     - field.field.node.arcade_game.field_game_code
     - field.field.node.arcade_game.field_game_integration
     - field.field.node.arcade_game.field_game_meta_tags
@@ -32,7 +33,7 @@ third_party_settings:
         - field_game_thumbnail
         - field_game_ribbon
       parent_name: ''
-      weight: 7
+      weight: 8
       format_type: details
       format_settings:
         id: ''
@@ -47,7 +48,7 @@ third_party_settings:
         - field_game_subprovider
         - field_game_integration
       parent_name: ''
-      weight: 9
+      weight: 10
       format_type: details
       format_settings:
         id: ''
@@ -59,7 +60,7 @@ third_party_settings:
       children:
         - field_right_side_block_state
       parent_name: ''
-      weight: 8
+      weight: 9
       format_type: tab
       format_settings:
         label: 'Promotion Thumbnail (Right-side Block)'
@@ -75,18 +76,26 @@ bundle: arcade_game
 mode: default
 content:
   field_arc_game_categories:
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
     region: content
   field_arc_game_title:
-    weight: 12
+    weight: 27
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: string_textarea
+    region: content
+  field_external_game_id:
+    weight: 6
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_game_code:
     weight: 11
@@ -105,13 +114,13 @@ content:
     type: string_textarea
     region: content
   field_game_meta_tags:
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
     region: content
   field_game_preview_mode:
-    weight: 12
+    weight: 13
     settings:
       display_label: true
     third_party_settings: {  }
@@ -124,7 +133,7 @@ content:
     type: options_select
     region: content
   field_game_ribbon:
-    weight: 14
+    weight: 29
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -136,7 +145,7 @@ content:
     type: options_select
     region: content
   field_game_thumbnail:
-    weight: 13
+    weight: 28
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -150,7 +159,7 @@ content:
     type: options_buttons
     region: content
   field_search_keywords:
-    weight: 13
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -185,7 +194,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 11
+    weight: 12
     region: content
     third_party_settings: {  }
   title:
