--- a/web/sites/nextbet/config/sync/core.entity_view_display.node.arcade_game.default.yml
+++ b/web/sites/nextbet/config/sync/core.entity_view_display.node.arcade_game.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.arcade_game.body
     - field.field.node.arcade_game.field_arc_game_categories
     - field.field.node.arcade_game.field_arc_game_title
+    - field.field.node.arcade_game.field_external_game_id
     - field.field.node.arcade_game.field_game_code
     - field.field.node.arcade_game.field_game_integration
     - field.field.node.arcade_game.field_game_meta_tags
@@ -36,7 +37,7 @@ content:
     third_party_settings: {  }
     region: content
   field_arc_game_categories:
-    weight: 2
+    weight: 3
     label: above
     settings:
       link: true
@@ -49,6 +50,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: basic_string
+    region: content
+  field_external_game_id:
+    weight: 2
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_code:
     weight: 4
