--- a/web/sites/nextbet/config/sync/core.entity_view_display.node.game.default.yml
+++ b/web/sites/nextbet/config/sync/core.entity_view_display.node.game.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.game.field_all_category_ribbon_config
+    - field.field.node.game.field_external_game_id
     - field.field.node.game.field_game_categories
     - field.field.node.game.field_game_code
     - field.field.node.game.field_game_filters
@@ -38,15 +39,23 @@ bundle: game
 mode: default
 content:
   field_all_category_ribbon_config:
-    weight: 102
+    weight: 1
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_external_game_id:
+    weight: 3
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_game_categories:
-    weight: 104
+    weight: 4
     label: above
     settings:
       link: true
@@ -54,7 +63,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_code:
-    weight: 105
+    weight: 5
     label: above
     settings:
       link_to_entity: false
@@ -62,7 +71,7 @@ content:
     type: string
     region: content
   field_game_filters:
-    weight: 103
+    weight: 2
     label: above
     settings:
       link: true
@@ -70,14 +79,14 @@ content:
     type: entity_reference_label
     region: content
   field_game_info:
-    weight: 106
+    weight: 6
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_game_info_toggle:
-    weight: 119
+    weight: 18
     label: above
     settings:
       format: default
@@ -87,28 +96,28 @@ content:
     type: boolean
     region: content
   field_game_integration:
-    weight: 112
+    weight: 12
     label: above
     settings: {  }
     third_party_settings: {  }
     type: basic_string
     region: content
   field_game_keywords:
-    weight: 116
+    weight: 16
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_game_meta_tags:
-    weight: 113
+    weight: 13
     label: above
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
   field_game_play_for_fun_toggle:
-    weight: 118
+    weight: 17
     label: above
     settings:
       format: default
@@ -118,7 +127,7 @@ content:
     type: boolean
     region: content
   field_game_preview_mode:
-    weight: 114
+    weight: 14
     label: above
     settings:
       format: default
@@ -128,7 +137,7 @@ content:
     type: boolean
     region: content
   field_game_provider:
-    weight: 107
+    weight: 7
     label: above
     settings:
       link: true
@@ -136,7 +145,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_ribbon:
-    weight: 115
+    weight: 15
     label: above
     settings:
       link: true
@@ -144,7 +153,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_subprovider:
-    weight: 108
+    weight: 8
     label: above
     settings:
       link: true
@@ -152,7 +161,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_thumbnail:
-    weight: 109
+    weight: 9
     label: above
     settings:
       image_style: ''
@@ -161,21 +170,21 @@ content:
     type: image
     region: content
   field_game_title:
-    weight: 110
+    weight: 10
     label: above
     settings: {  }
     third_party_settings: {  }
     type: basic_string
     region: content
   field_game_type:
-    weight: 111
+    weight: 11
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_maintenance_end:
-    weight: 120
+    weight: 19
     label: above
     settings:
       format_type: medium
@@ -184,14 +193,14 @@ content:
     type: datetime_default
     region: content
   field_maintenance_message:
-    weight: 121
+    weight: 20
     label: above
     settings: {  }
     third_party_settings: {  }
     type: basic_string
     region: content
   field_maintenance_start:
-    weight: 122
+    weight: 21
     label: above
     settings:
       format_type: medium
@@ -200,14 +209,16 @@ content:
     type: datetime_default
     region: content
   field_right_side_block_state:
-    weight: 123
+    weight: 22
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   links:
-    weight: 100
+    weight: 0
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   langcode: true
