--- a/web/sites/nextbet/config/sync/core.extension.yml
+++ b/web/sites/nextbet/config/sync/core.extension.yml
@@ -24,6 +24,7 @@ module:
   contact_us_config: 0
   content_translation: 0
   contextual: 0
+  csv_serialization: 0
   ctools: 0
   datetime: 0
   devel: 0
@@ -33,6 +34,7 @@ module:
   entity_reference_revisions: 0
   entity_reference_views_select: 0
   entityqueue: 0
+  feeds: 0
   field: 0
   field_group: 0
   field_ui: 0
@@ -90,6 +92,7 @@ module:
   token: 0
   toolbar: 0
   user: 0
+  views_data_export: 0
   views_ui: 0
   webcomposer_affilates: 0
   webcomposer_announcements: 0
