--- a/web/sites/nextbet/config/sync/core.entity_form_display.node.games_live_dealer.default.yml
+++ b/web/sites/nextbet/config/sync/core.entity_form_display.node.games_live_dealer.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.games_live_dealer.body
+    - field.field.node.games_live_dealer.field_external_game_id
     - field.field.node.games_live_dealer.field_game_code
     - field.field.node.games_live_dealer.field_game_icon
     - field.field.node.games_live_dealer.field_game_image
@@ -99,6 +100,7 @@ third_party_settings:
         - field_game_provider
         - field_game_subprovider
         - field_game_code
+        - field_external_game_id
         - field_game_lobby_category
       parent_name: ''
       weight: 11
@@ -148,8 +150,16 @@ content:
     weight: 30
     settings: {  }
     region: content
-  field_game_code:
+  field_external_game_id:
     weight: 19
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_game_code:
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -232,7 +242,7 @@ content:
     type: boolean_checkbox
     region: content
   field_game_lobby_category:
-    weight: 21
+    weight: 20
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -257,7 +267,7 @@ content:
     type: options_select
     region: content
   field_game_subprovider:
-    weight: 18
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_select
