--- a/web/sites/nextbet/config/sync/core.entity_view_display.node.games_live_dealer.default.yml
+++ b/web/sites/nextbet/config/sync/core.entity_view_display.node.games_live_dealer.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.games_live_dealer.body
+    - field.field.node.games_live_dealer.field_external_game_id
     - field.field.node.games_live_dealer.field_game_code
     - field.field.node.games_live_dealer.field_game_icon
     - field.field.node.games_live_dealer.field_game_image
@@ -42,6 +43,14 @@ content:
     weight: 1
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_external_game_id:
+    weight: 102
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_code:
     weight: 12
