--- a/web/sites/zipang-casino/config/sync/field.storage.paragraph.field_metatag_name.yml
+++ b/web/sites/zipang-casino/config/sync/field.storage.paragraph.field_metatag_name.yml
@@ -38,6 +38,12 @@ settings:
     -
       value: content-language
       label: 'Content Language'
+    -
+      value: canonical
+      label: Canonical
+    -
+      value: alternate
+      label: 'Alternate Canonical'
   allowed_values_function: ''
 module: options
 locked: false
