--- a/web/sites/registration/config/sync/field.storage.paragraph.field_socialmedia_cmi_link_class.yml
+++ b/web/sites/registration/config/sync/field.storage.paragraph.field_socialmedia_cmi_link_class.yml
@@ -31,6 +31,9 @@ settings:
     -
       value: instagram
       label: Instagram
+    -
+      value: telegram
+      label: Telegram
   allowed_values_function: ''
 module: options
 locked: false
