WEBSITE-2566 - Fixes UI issues
Fixes a few UI fixes caught by QAs. "Optional" should be bold, the rest of the line underlined and there was a colon missing.

--- a/web/sites/registration/config/sync/webcomposer_form_manager.form.registration_form.upload_id_choose_type.yml
+++ b/web/sites/registration/config/sync/webcomposer_form_manager.form.registration_form.upload_id_choose_type.yml
@@ -1,5 +1,5 @@
 field_settings:
-  label: '<span style="color:#FF0000">Optional</span> Upload a clear front copy of your ID:'
+  label: '<span style="color:#ff0000; font-weight:bold">Optional:</span> <span style="font-style: italic;">Upload a clear front copy of your ID:</span>'
   placeholder: '- Select One -'
 field_validations:
   required:
