--- a/web/sites/mobile-nextbet/config/sync/views.view.marketing_script_list.yml
+++ b/web/sites/mobile-nextbet/config/sync/views.view.marketing_script_list.yml
@@ -200,7 +200,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: api/marketing_script
+      path: api/marketing_scripts
       pager:
         type: none
         options:
