WEBSITE-3143 - zipang 777baby jamboree search option.

--- a/web/sites/zipang-casino/config/sync/views.view.zipang_seo_metatag_entity_api.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.zipang_seo_metatag_entity_api.yml
@@ -42,7 +42,7 @@ display:
         type: basic
         options:
           submit_button: Apply
-          reset_button: false
+          reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
@@ -197,9 +197,9 @@ display:
           group_type: group
           admin_label: ''
           order: DESC
-          exposed: true
+          exposed: false
           expose:
-            label: 'Tag (field_tag)'
+            label: ''
           plugin_id: standard
       header: {  }
       footer: {  }
@@ -213,8 +213,6 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - 'url.query_args:sort_by'
-        - 'url.query_args:sort_order'
       tags: {  }
   page_1:
     display_plugin: page
@@ -357,7 +355,7 @@ display:
           value:
             '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
           group: 1
-          exposed: true
+          exposed: false
           expose:
             operator_id: langcode_op
             label: 'Translation language'
@@ -389,10 +387,10 @@ display:
           entity_type: zipang_seo_config_entity
           entity_field: langcode
           plugin_id: language
-        name:
-          id: name
-          table: zipang_seo_config_entity_field_data
-          field: name
+        field_name_value:
+          id: field_name_value
+          table: zipang_seo_config_entity__field_name
+          field: field_name_value
           relationship: none
           group_type: group
           admin_label: ''
@@ -401,11 +399,11 @@ display:
           group: 1
           exposed: true
           expose:
-            operator_id: name_op
+            operator_id: field_name_value_op
             label: Name
             description: ''
             use_operator: false
-            operator: name_op
+            operator: field_name_value_op
             identifier: name
             required: false
             remember: false
@@ -415,6 +413,7 @@ display:
               anonymous: '0'
               administrator: '0'
               e: '0'
+              users_all_except_admin_permissions_: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -428,8 +427,6 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: zipang_seo_config_entity
-          entity_field: name
           plugin_id: string
       filter_groups:
         operator: AND
@@ -456,9 +453,9 @@ display:
           group_type: group
           admin_label: ''
           order: DESC
-          exposed: true
+          exposed: false
           expose:
-            label: 'Tag (field_tag)'
+            label: ''
           plugin_id: standard
       pager:
         type: full
@@ -481,15 +478,6 @@ display:
             offset: false
             offset_label: Offset
           quantity: 9
-      menu:
-        type: none
-        title: Meta
-        description: ''
-        expanded: false
-        parent: system.admin_config_content
-        weight: 0
-        context: '0'
-        menu_name: admin
     cache_metadata:
       max-age: -1
       contexts:
@@ -497,8 +485,6 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - 'url.query_args:sort_by'
-        - 'url.query_args:sort_order'
       tags:
         - 'config:field.storage.zipang_seo_config_entity.field_name'
   rest_export_1:
@@ -547,6 +533,4 @@ display:
         - 'languages:language_interface'
         - request_format
         - url.query_args
-        - 'url.query_args:sort_by'
-        - 'url.query_args:sort_order'
       tags: {  }
