--- a/web/sites/mobile-nextbet/config/sync/field.storage.webcomposer_slider_v2_entity.field_slider_game_provider.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.webcomposer_slider_v2_entity.field_slider_game_provider.yml
@@ -29,6 +29,9 @@ settings:
     -
       value: cq9
       label: 'CQ9 Gaming'
+    -
+      value: jsystem
+      label: JSystem
   allowed_values_function: ''
 module: options
 locked: false
