--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider.yml
@@ -32,6 +32,9 @@ settings:
     -
       value: pgsoft
       label: PGSoft
+    -
+      value: jsystem
+      label: JSystem
   allowed_values_function: ''
 module: options
 locked: false
