--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_arcade.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_arcade.yml
@@ -29,6 +29,9 @@ settings:
     -
       value: pgsoft
       label: PGSoft
+    -
+      value: jsystem
+      label: JSystem
   allowed_values_function: ''
 module: options
 locked: false
