--- a/web/sites/mobile-nextbet/config/sync/webcomposer_config.icore_games_integration.yml
+++ b/web/sites/mobile-nextbet/config/sync/webcomposer_config.icore_games_integration.yml
@@ -1,6 +1,6 @@
-icore_games_integration_form__active_tab: edit-cq9
-asia_gaming_currency: "RMB\r\nUSD\r\nMYR\r\nTHB\r\nKRW\r\nVND\r\nIDR\r\nINR\r\nEUR"
-asia_gaming_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nko|ko-KR\r\nvn|vn\r\nid|id\r\nin|hi"
+icore_games_integration_form__active_tab: edit-jsystem
+asia_gaming_currency: "RMB\r\nTHB\r\nVND\r\nIDR\r\nKRW\r\nINR"
+asia_gaming_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nko|ko-KR\r\nvn|vn\r\nid|id\r\nin|en-US\r\nte|en-US\r\nhi|hi\r\nlo|en-US\r\nbu|en-US\r\nkm|en-US"
 asia_gaming_country: ''
 asia_gaming_custom_lobbyDomain: ''
 asia_gaming_custom_lobbyDomain_enabled: 0
@@ -10,11 +10,11 @@ kiron_virtual_sports_country: ''
 gb_virtual_sports_currency: ''
 gb_virtual_sports_language_mapping: ''
 gb_virtual_sports_country: ''
-skywind_currency: "RMB\r\nMYR\r\nTHB\r\nKRW\r\nIDR\r\nVND\r\nUSD\r\nEUR\r\nGBP\r\nRUB\r\nBRL\r\nMXN\r\nCLP\r\nCOP\r\nPEN\r\nARS\r\nVES\r\nLAK\r\nKHR\r\nMMK"
-skywind_language_mapping: "en|en\r\nsc|zh-cn\r\nth|th\r\nkr|ko\r\nvn|vi\r\nid|id\r\nes|ES\r\npt|pt-BR"
+skywind_currency: "RMB\r\nCNY\r\nMYR\r\nTHB\r\nKRW\r\nIDR\r\nVND\r\nUSD\r\nEUR\r\nGBP\r\nRUB\r\nBRL\r\nMXN\r\nCLP\r\nCOP\r\nPEN\r\nARS\r\nVES\r\nMMK\r\nINR"
+skywind_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nkr|ko\r\nvn|vi\r\nid|id\r\nes|ES\r\npt|pt\r\nin|en-US\r\nte|en-US\r\nhi|en-US\r\nbu|en-US\r\nlo|en-US\r\nkm|km"
 skywind_country: ''
-voidbridge_currency: "RMB\r\nMYR\r\nTHB\r\nKRW\r\nIDR\r\nINR\r\nVND\r\nUSD\r\nEUR\r\nGBP\r\nRUB\r\nBRL\r\nMXN\r\nCLP\r\nPEN\r\nARS\r\nmBC"
-voidbridge_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nkr|ko\r\nvn|vi\r\nid|id\r\nes|ES\r\npt|pt-BR"
+voidbridge_currency: "RMB\r\nCNY\r\nMYR\r\nTHB\r\nKRW\r\nIDR\r\nINR\r\nVND\r\nUSD\r\nEUR\r\nGBP\r\nRUB\r\nBRL\r\nMXN\r\nCLP\r\nCOP\r\nPEN\r\nARS\r\nVES\r\nMBC"
+voidbridge_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nkr|ko\r\nvn|vi\r\nid|id\r\nes|ES\r\npt|pt-BR\r\nin|en-US"
 voidbridge_country: ''
 gold_deluxe_currency: ''
 gold_deluxe_language_mapping: ''
@@ -22,8 +22,8 @@ gold_deluxe_country: ''
 video_racing_currency: ''
 video_racing_language_mapping: ''
 video_racing_country: ''
-sa_gaming_currency: "MYR\r\nTHB\r\nVND\r\nIDR"
-sa_gaming_language_mapping: "en|en-US\r\nsc|zh-CN\r\nid|id\r\nvn|vn\r\nth|th"
+sa_gaming_currency: "MYR\r\nTHB\r\nVND\r\nIDR\r\nINR"
+sa_gaming_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nvn|vn\r\nid|id\r\nin|en-US"
 sa_gaming_country: ''
 allbet_currency: ''
 allbet_language_mapping: ''
@@ -31,17 +31,17 @@ allbet_country: ''
 tgp_currency: ''
 tgp_language_mapping: ''
 tgp_country: ''
-evo_gaming_currency: "USD\r\nGBP\r\nMYR\r\nTHB\r\nKRW\r\nVND\r\nIDR\r\nINR\r\nRUB\r\nRMB\r\nEUR\r\nPLN\r\nmBC"
-evo_gaming_language_mapping: "sc|zh-CN\r\nen|en-US\r\nin|en-US\r\nid|id\r\nkr|ko-KR\r\nth|th\r\nvn|vn"
+evo_gaming_currency: "USD\r\nGBP\r\nMYR\r\nTHB\r\nKRW\r\nVND\r\nIDR\r\nINR\r\nRUB\r\nRMB\r\nEUR\r\nPLN\r\nmBC\r\nLAK\r\nMMK\r\nKHR"
+evo_gaming_language_mapping: "sc|zh-CN\r\nen|en-US\r\nin|en-US\r\nte|en-US\r\nhi|en-US\r\nid|id\r\nkr|ko-KR\r\nth|th\r\nvn|vn\r\nlo|en-US\r\nbu|en-US\r\nkm|en-US"
 evo_gaming_country: ''
 ebet_currency: ''
 ebet_language_mapping: ''
 ebet_country: ''
-cq9_currency: "RMB\r\nTHB\r\nVND\r\nIDR\r\nKRW"
-cq9_language_mapping: "en|en-US\r\nsc|zh-CN"
+cq9_currency: "RMB\r\nTHB\r\nVND\r\nIDR\r\nKRW\r\nMYR\r\nINR"
+cq9_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nko|ko-KR\r\nvn|vn\r\nid|id\r\nin|en-US"
 cq9_country: ''
-solid_gaming_currency: "RMB\r\nMYR\r\nKRW\r\nTHB\r\nIDR\r\nVND"
-solid_gaming_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nkr|ko-KR\r\nvn|vi\r\nid|id"
+solid_gaming_currency: "MYR\r\nTHB\r\nIDR\r\nVND\r\nINR"
+solid_gaming_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nkr|ko-KR\r\nvn|vi\r\nid|id\r\nin|en-US"
 solid_gaming_country: ''
 gameworx_lottery_currency: ''
 gameworx_lottery_language_mapping: ''
@@ -68,8 +68,8 @@ betconstruct_container_id: ''
 fun_gaming_currency: ''
 fun_gaming_language_mapping: ''
 fun_gaming_country: ''
-micro_gaming_currency: "RMB\r\nTHB\r\nMYR\r\nVND\r\nKRW\r\nIDR"
-micro_gaming_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nkr|ko\r\nvn|vi\r\nid|id"
+micro_gaming_currency: "RMB\r\nTHB\r\nMYR\r\nVND\r\nKRW\r\nIDR\r\nINR"
+micro_gaming_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nkr|ko-KR\r\nvn|vi\r\nid|id\r\nin|en-US"
 micro_gaming_country: ''
 flow_gaming_currency: ''
 flow_gaming_language_mapping: ''
@@ -77,8 +77,8 @@ flow_gaming_country: ''
 ky_gaming_currency: ''
 ky_gaming_language_mapping: ''
 ky_gaming_country: ''
-pgsoft_currency: ''
-pgsoft_language_mapping: ''
+pgsoft_currency: "RMB\r\nTHB\r\nKRW\r\nVND\r\nIDR\r\nINR"
+pgsoft_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nkr|ko-KR\r\nvn|vi\r\nid|id\r\nin|en-US"
 pgsoft_country: ''
 ruby_play_currency: ''
 ruby_play_language_mapping: ''
@@ -102,3 +102,43 @@ safari_notif:
   format: basic_html
 value: null
 format: null
+jsystem_currency: "RMB\r\nUSD\r\nMYR\r\nTHB\r\nKRW\r\nVND\r\nIDR\r\nINR\r\nEUR"
+jsystem_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nko|ko-KR\r\nvn|vn\r\nid|id\r\nin|en-US"
+jsystem_country: ''
+fghub_gaming_currency: ''
+fghub_gaming_language_mapping: ''
+fghub_gaming_country: ''
+ptplus_currency: ''
+ptplus_language_mapping: ''
+ptplus_country: ''
+pgsoft_geoip_domain_override: ''
+asia_gaming_use_playergame_api: 0
+kiron_virtual_sports_use_playergame_api: 0
+gb_virtual_sports_use_playergame_api: 0
+skywind_use_playergame_api: 1
+voidbridge_use_playergame_api: 0
+gold_deluxe_use_playergame_api: 0
+video_racing_use_playergame_api: 0
+sa_gaming_use_playergame_api: 0
+allbet_use_playergame_api: 0
+tgp_use_playergame_api: 0
+evo_gaming_use_playergame_api: 0
+ebet_use_playergame_api: 0
+cq9_use_playergame_api: 0
+solid_gaming_use_playergame_api: 0
+gameworx_lottery_use_playergame_api: 0
+gameworx_quicklotto_use_playergame_api: 0
+betconstruct_use_playergame_api: 0
+fun_gaming_use_playergame_api: 0
+micro_gaming_use_playergame_api: 0
+ky_gaming_use_playergame_api: 0
+pgsoft_use_playergame_api: 0
+ruby_play_use_playergame_api: 0
+ezugi_gaming_use_playergame_api: 0
+wac_use_playergame_api: 0
+lottoland_use_playergame_api: 0
+onegame_use_playergame_api: 0
+jsystem_use_playergame_api: 0
+fghub_gaming_use_playergame_api: 0
+ptplus_use_playergame_api: 0
+pas_use_playergame_api: 1
