--- a/web/sites/zipang-casino/config/sync/core.entity_form_display.node.basic_page_type_2.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_form_display.node.basic_page_type_2.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.basic_page_type_2.field_images_open_link
     - field.field.node.basic_page_type_2.field_meta_tag
     - field.field.node.basic_page_type_2.field_parent
+    - field.field.node.basic_page_type_2.field_show_title
     - field.field.node.basic_page_type_2.field_summary
     - image.style.thumbnail
     - node.type.basic_page_type_2
@@ -30,7 +31,7 @@ third_party_settings:
         - field_image_link
         - field_images_open_link
       parent_name: ''
-      weight: 8
+      weight: 9
       format_type: fieldset
       format_settings:
         id: ''
@@ -45,7 +46,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 7
+    weight: 8
     settings:
       rows: 9
       summary_rows: 3
@@ -54,12 +55,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_breadcrumbs:
-    weight: 15
+    weight: 16
     settings:
       size: 60
       placeholder: ''
@@ -67,7 +68,7 @@ content:
     type: string_textfield
     region: content
   field_button_link:
-    weight: 9
+    weight: 10
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -75,7 +76,7 @@ content:
     type: link_default
     region: content
   field_button_open_link:
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -103,13 +104,13 @@ content:
     type: options_select
     region: content
   field_meta_tag:
-    weight: 12
+    weight: 13
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
     region: content
   field_parent:
-    weight: 126
+    weight: 17
     settings:
       size: 60
       match_operator: CONTAINS
@@ -117,8 +118,15 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_show_title:
+    weight: 1
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_summary:
-    weight: 6
+    weight: 7
     settings:
       rows: 5
       placeholder: ''
@@ -127,14 +135,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 1
+    weight: 2
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -142,21 +150,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 4
+    weight: 5
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 14
+    weight: 15
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 5
+    weight: 6
     region: content
     third_party_settings: {  }
   title:
@@ -168,13 +176,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
