ATLANTIC-120: added missing conf values.

--- a/web/sites/mobile-nextbet/config/sync/config_ignore.settings.yml
+++ b/web/sites/mobile-nextbet/config/sync/config_ignore.settings.yml
@@ -1,12 +1,20 @@
 ignored_config_entities:
   0: 'webform.webform.*'
+  1: 'account_config.*'
   2: 'webcomposer_config.*'
+  3: 'contact.form.personal'
   4: 'system.menu.*'
+  5: 'field.field.*'
   6: 'block.*'
+  7: 'field.storage.*'
   8: ~block.block.languagedropdownswitcher
+  9: 'mobile_sponsor_list_v2.mobile_sponsor_list_v2_configuration'
   10: 'filter.*'
+  11: 'mobile_nextbet_logo_upload.mobile_logo_upload'
   12: 'devel.*'
+  13: 'registration_config.general_configuration'
   14: 'mobile_als.*'
+  15: 'views.view.*'
   16: 'webcomposer_cache.*'
   18: 'mobile_promotions.*'
   20: 'mobile_nextbet.*'
