ATLANTIC-120: added core and feeds to the config ignore settings.

--- a/web/sites/mobile-nextbet/config/sync/config_ignore.settings.yml
+++ b/web/sites/mobile-nextbet/config/sync/config_ignore.settings.yml
@@ -16,7 +16,9 @@ ignored_config_entities:
   14: 'mobile_als.*'
   15: 'views.view.*'
   16: 'webcomposer_cache.*'
+  17: 'feeds.*'
   18: 'mobile_promotions.*'
+  19: 'core.*'
   20: 'mobile_nextbet.*'
   22: 'contact_us_config.*'
   24: 'webcomposer_form_manager.form.contact_us_form.*'
