PACIFIC-200 install enable views bulk edit.

--- a/web/sites/zipang-casino/config/sync/views.view.game_list.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list.yml
@@ -17,6 +17,7 @@ dependencies:
     - rest
     - serialization
     - taxonomy
+    - views_bulk_operations
     - webcomposer_rest_extra
     - zipang_desktop_games
 _core:
@@ -222,6 +223,70 @@ display:
       path: admin/structure/zipang_desktop_games_entity
       display_description: ''
       fields:
+        views_bulk_operations_bulk_form:
+          id: views_bulk_operations_bulk_form
+          table: views
+          field: views_bulk_operations_bulk_form
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Views bulk operations'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          batch: true
+          batch_size: 50
+          form_step: true
+          buttons: false
+          clear_on_exposed: false
+          action_title: Action
+          selected_actions:
+            views_bulk_edit: views_bulk_edit
+            views_bulk_operations_delete_entity: 0
+            pathauto_update_alias: 0
+            'entity:save_action:zipang_desktop_games_entity': 0
+          preconfiguration:
+            views_bulk_edit:
+              label_override: ''
+              get_bundles_from_results: 1
+          plugin_id: views_bulk_operations_bulk_form
         field_enable_game:
           id: field_enable_game
           table: zipang_desktop_games_entity__field_enable_game
