ATLANTIC-34: added setup for menu link attributes form to enable svg files upload.

--- a/web/sites/mobile-nextbet/config/sync/menu_link_attributes.config.yml
+++ b/web/sites/mobile-nextbet/config/sync/menu_link_attributes.config.yml
@@ -13,6 +13,11 @@ attributes:
   svg:
     label: ''
     description: ''
+  icon:
+    label: ''
+    description: ''
+    type: managed_file
+    file_validate_extensions: 'svg'
   target:
     label: ''
     description: ''
