--- a/web/sites/mobile-nextbet/config/sync/config_ignore.settings.yml
+++ b/web/sites/mobile-nextbet/config/sync/config_ignore.settings.yml
@@ -20,8 +20,8 @@ ignored_config_entities:
   18: 'mobile_promotions.*'
   19: 'core.*'
   20: 'mobile_nextbet.*'
+  21: 'menu_link_attributes.config.*'
   22: 'contact_us_config.*'
-  24: 'webcomposer_form_manager.form.contact_us_form.*'
   26: 'mobile_slots.*'
   28: 'mobile_live_dealer.*'
   30: 'mobile_arcade.*'
