--- a/web/sites/zipang-casino/config/sync/views.view.game_list.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list.yml
@@ -23,7 +23,7 @@ dependencies:
 _core:
   default_config_hash: e13FURpbRTlTgCaNvMklFBzWIRjje_0zN0TdXzpGVwE
 id: game_list
-label: 'Game List (Desktop)'
+label: 'Game List'
 module: views
 description: ''
 tag: ''
