--- a/web/sites/zipang-casino/config/sync/core.entity_form_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_form_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
@@ -3,12 +3,14 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.feeds_item
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_all_games_category
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_arcade_game_category
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_arcade_game_filter
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_client_type
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_free_play
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_game
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_game_mobile
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_external_game_id
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_category
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_code
@@ -39,7 +41,7 @@ third_party_settings:
         - field_game_category
         - field_game_filter
       parent_name: ''
-      weight: 12
+      weight: 13
       format_type: fieldset
       format_settings:
         id: ''
@@ -51,7 +53,7 @@ third_party_settings:
       children:
         - field_game_filter_games
       parent_name: ''
-      weight: 13
+      weight: 14
       format_type: fieldset
       format_settings:
         id: ''
@@ -64,7 +66,7 @@ third_party_settings:
         - field_arcade_game_category
         - field_arcade_game_filter
       parent_name: ''
-      weight: 15
+      weight: 16
       format_type: fieldset
       format_settings:
         id: ''
@@ -77,7 +79,7 @@ third_party_settings:
         - field_game_title_icon
         - field_game_icon_label
       parent_name: ''
-      weight: 16
+      weight: 17
       format_type: fieldset
       format_settings:
         id: ''
@@ -93,7 +95,7 @@ bundle: zipang_desktop_games_entity
 mode: default
 content:
   field_all_games_category:
-    weight: 14
+    weight: 15
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -111,13 +113,13 @@ content:
     type: options_select
     region: content
   field_client_type:
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_enable_free_play:
-    weight: 8
+    weight: 9
     settings:
       display_label: true
     third_party_settings: {  }
@@ -130,8 +132,15 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_enable_game_mobile:
+    weight: 1
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_external_game_id:
-    weight: 18
+    weight: 19
     settings:
       size: 60
       placeholder: ''
@@ -163,14 +172,6 @@ content:
     type: options_buttons
     region: content
   field_game_code:
-    weight: 4
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_game_code_icore:
     weight: 5
     settings:
       size: 60
@@ -178,8 +179,16 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_game_code_icore:
+    weight: 6
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_game_description:
-    weight: 17
+    weight: 18
     settings:
       rows: 9
       summary_rows: 3
@@ -244,19 +253,19 @@ content:
     type: string_textfield
     region: content
   field_game_provider:
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_tag:
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_thumbnail:
-    weight: 3
+    weight: 4
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -264,7 +273,7 @@ content:
     type: image_image
     region: content
   field_game_title:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -280,25 +289,26 @@ content:
     type: image_image
     region: content
   field_game_type:
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_provider_product:
     type: options_select
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 3
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
 hidden:
+  feeds_item: true
   name: true
   translation: true
   user_id: true
