--- a/web/sites/zipang-casino/config/sync/field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_game.yml
+++ b/web/sites/zipang-casino/config/sync/field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_game.yml
@@ -12,7 +12,7 @@ id: zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_game
 field_name: field_enable_game
 entity_type: zipang_desktop_games_entity
 bundle: zipang_desktop_games_entity
-label: 'Enable Game'
+label: 'Enable Game Desktop'
 description: ''
 required: false
 translatable: true
