ATLANTIC-34: added upload location for svg files in the menu link config.

--- a/web/sites/mobile-nextbet/config/sync/menu_link_attributes.config.yml
+++ b/web/sites/mobile-nextbet/config/sync/menu_link_attributes.config.yml
@@ -18,6 +18,8 @@ attributes:
     description: ''
     type: managed_file
     file_validate_extensions: 'svg'
+    multiple: false
+    upload_location: 'public://icons/'
   target:
     label: ''
     description: ''
