--- a/web/sites/zipang-casino/config/sync/feeds.feed_type.games_import.yml
+++ b/web/sites/zipang-casino/config/sync/feeds.feed_type.games_import.yml
@@ -141,6 +141,14 @@ custom_sources:
     label: 'iCore Game Code (refer to iCore game detail)'
     value: 'iCore Game Code (refer to iCore game detail)'
     machine_name: icore_game_code_refer_to_icore_game_detail_
+  enable_game_desktop:
+    label: 'Enable Game Desktop'
+    value: 'Enable Game Desktop'
+    machine_name: enable_game_desktop
+  enable_game_mobile:
+    label: 'Enable Game Mobile'
+    value: 'Enable Game Mobile'
+    machine_name: enable_game_mobile
 mappings:
   -
     target: field_game_title
@@ -157,11 +165,11 @@ mappings:
   -
     target: field_enable_game
     map:
-      value: enable_desktop
+      value: enable_game_desktop
   -
     target: field_enable_game_mobile
     map:
-      value: enable_mobile
+      value: enable_game_mobile
   -
     target: field_client_type
     map:
